--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # misc
 .DS_Store
 /client-deploy
+/client_2nd
 tradingbot.txt
-
+client-deploy-tips.md
+trading-bot-d40d7-firebase-adminsdk-nnagv-d8b080c313.json
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
