--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "google-protobuf": "^3.20.1",
     "grpc-web": "^1.3.1",
     "lodash.find": "^4.6.0",
+    "moment": "^2.29.3",
     "node-sass": "4.14.1",
     "react": "17.0.0",
     "react-dom": "17.0.0",
